# number-to-georgian-cpp

./: CMakeLists.txt  LICENSE  README.md
number_to_georgian/: number_to_georgian.h
tests/: test_number_to_georgian.cpp
